--- a/style.css
+++ b/style.css
@@ -1,268 +1,221 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap');
-
-
-body{
-	margin: 0;
-	font-family: 'Poppins', sans-serif;
-	scroll-behavior: smooth;
+body,
+html {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
-*{
-	box-sizing: border-box;
+textarea {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
-/*utilities*/
-h1 ,h4 ,h5 ,p {
-	margin:0;
+* {
+  box-sizing: border-box;
 }
 
-.bg__dark{
-       background-color: #212121;
-       margin-bottom: 4px;
+.wrapper {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
-.bg__light{
-	background-color: lightseagreen !important;
+@media (min-width: 576px) {
+  .wrapper {
+    max-width: 540px;
+  }
 }
 
-.bg__dark .btn__light  {
-    margin-left: 30px;
-    margin-top: 15px;
-    padding-top: 10px;
-}
-.text__light{
-		color: #fff;													
+@media (min-width: 768px) {
+  .wrapper {
+    max-width: 720px;
+  }
 }
 
+@media (min-width: 992px) {
+  .wrapper {
+    max-width: 960px;
+  }
+}
 
-.btn__dark {
-	display: inline-block;
-	background-color: #212121;
-	color: #fff;
-	text-decoration: none;
-	padding: 10px 20px;	
- 	border-radius: 25px;
- 	font-size: 14px;
- 	letter-spacing: 2px;
- 	transition: all 0.4s;
+@media (min-width: 1200px) {
+  .wrapper {
+    max-width: 1140px;
+  }
 }
 
 
-.btn__light {
-	display: inline-block;
-	background-color: #737070;
-	color: #fff;
-	text-decoration: none;
-	padding: 10px 20px;	
- 	border-radius: 25px;
- 	font-size: 14px;
- 	letter-spacing: 2px;
- 	transition: all 0.4s;
-}
-.btn__light{
-    
-	background-color: #lightseagreen;
+.d-grid {
+  display: grid;
 }
 
-.btn__dark{
-	background-color: #212121;
+.text-center {
+  text-align: center;
 }
 
-.btn__dark:hover {
-	background-color: #fff;
-	color: lightseagreen;
-
+.text-left {
+  text-align: left;
 }
 
-.btn__light:hover {
-	background-color: #fff;
-	color: lightseagreen;
-
+.text-right {
+  text-align: right;
 }
 
-.margin__top{
-	margin-top: 15px;
+button,
+select {
+  outline: none;
+  appearance: none;
+  -webkit-appearance: none;
 }
 
-.image__responsive{
-	width: 100%;
-	max-height: 100%;
-	height: auto;
+button,
+.btn,
+select {
+  cursor: pointer;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
-/*navbar */
-
-
-
-
-.navbar ul{
-	display: flex;
-	justify-content: center; 
-	padding: 0;
-	margin: 0;
-	list-style-type: none; 
-	cursor: pointer;
-	background-color: #212121;
+a {
+  text-decoration: none;
 }
 
-.navbar ul li{
-	display: inline-block;
-
+iframe {
+  border: none;
 }
 
-.navbar li a{
-	display: block;
-	color: #fff;
-	text-decoration: none;
-	text-transform: uppercase;
-	padding: 25px 20px;
-	font-size: 13px;
-	color: lightseagreen;
-	letter-spacing:2px; 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
-/*hero section*/
-
-.hero__section{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 100%;
-	height: 85vh;
-	background-image:linear-gradient(#808080,#808080) ,url("../content_img/Halkova.jpg");
-	background-blend-mode: multiply;
-	background-size: cover;
-}
-.hero__text{
-	color:#fff;
-	text-align: center; 
-	text-transform: uppercase;
+p {
+  margin: 0;
+  padding: 0;
 }
 
-.hero__text h1{
-	font-size: 100px;
-	font-weight: 500;
-
-}
-.hero__text p{
-	letter-spacing: 5px;
-	
+/* Section top bottom gap */
+.section-gap {
+  padding: 4.5rem 0;
 }
 
-/*recipe section*/
-.recipe__section{
-	padding: 70px 0;	
-
+@media screen and (max-width:767px) {
+  .section-gap {
+    padding: 3.5rem 0;
+  }
 }
 
-.image__wrapper{
-	position: relative;
-	width: 100%;
-	height: 100%;
-	background-color: lightseagreen;
-	overflow: hidden;
-	border-radius: 2px;
-
+@media screen and (max-width:480px) {
+  .section-gap {
+    padding: 3rem 0;
+  }
 }
 
-.image__wrapper img{
-	width: 100%;
-	max-width: 100%;
-	height: auto;
-	transition: all 0.4s;
-	cursor: pointer;
+/* / Section top bottom gap */
 
-}
-
-.image__wrapper:hover img{
-	transform: scale(1.2, 1.2);
-
-}
-.image__wrapper-text{
-	padding: 30px 15px;
-	height: 150px;
-	position: absolute;
-	bottom: 0px;
-	text-align: center;
-	background-color: rgba(0,0,0,0.7);
-	color: #fff;
-}
-.image__wrapper-text h5{
-	color:lightseagreen;
-	font-size: 20px;
-	font-weight: 500;
-}
-.image__wrapper-text p{
-	line-height: 26px;
+/* title-styling */
+h3.global-title {
+  font-size: 40px;
+  line-height: 45px;
+  color: #16191e;
+  margin-bottom: 50px;
+  text-transform: capitalize;
 }
 
-/*about section*/
-.about__section{
-	padding: 70px 0;
-	background-color: lightseagreen;
-	color: #fff;
+@media screen and (max-width:767px) {
+  h3.global-title {
+    font-size: 40px;
+    line-height: 45px;
+  }
 }
 
-.about__section h4{
-	font-size: 28px;
-	font-weight: 500;
-}
-.about__section p{
-	line-height: 36px;
-	font-weight: 100;
-}
-.image__background{
-	position: relative;
-	z-index: 1;
+@media screen and (max-width:600px) {
+  h3.global-title {
+    font-size: 35px;
+    line-height: 40px;
+  }
 }
 
-.image__background:before {
-	position: absolute;
-	top: -30px;
-	left:-30px;
-	content: "";
-	width: 100%;
-	height: 100%;
-	z-index: -1;
-	background-color: #000;
-}
-.image__background img{
-	box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.5);
+@media screen and (max-width:500px) {
+  h3.global-title {
+    font-size: 30px;
+    line-height: 35px;
+  }
 }
 
-/*extra section*/
-.extra__section{
-	padding: 70px 0;
-}
-.extra__section h4{
-    padding: 13px 10px;
-    font-size: 23px;
-	font-weight: 500;
-}
-.extra__section p{
-    padding-left: 20px;
-    line-height: 32px;
-	font-weight: 300;
+/* / title-styling */
+/* simple contact form */
+.contact-form {
+  background: #eee;
 }
 
-/*subscribe section*/
-.subscribe__section{
-	padding: 40px 0;
-	background-color: #212121;
-	color: #fff;
+.field {
+  margin-bottom: 20px;
 }
-.subscribe__section form{
-	display: flex;
-}
-.subscribe__section button{
-	background-color: lightseagreen;
-	color: #fff;
-	border: none;
-	padding: 10px 20px;
-	cursor: pointer;
-}
-/*Category section*/
 
-.category__section{
-	padding: 70px 0;
+.form-mid {
+  background: #fff;
+  padding: 3rem;
+  border: 1px solid #eee;
+  border-radius: 4px;
 }
+
+.form-mid form input,
+.form-mid form textarea {
+  background: #f8f9fa;
+  border: 2px solid rgba(216, 216, 216, 0.3);
+  color: #777;
+  font-size: 16px;
+  padding: 12px 15px;
+  width: 100%;
+  border-radius: 4px;
+  height: 55px;
+}
+
+.form-mid form textarea {
+  resize: none;
+  min-height: 140px;
+}
+
+.form-mid form input:focus,
+.form-mid form textarea:focus {
+  outline: none;
+  border: 2px solid #051b35;
+  background: #fff;
+  box-shadow: none;
+}
+
+button.btn-contact {
+  border: none;
+  font-size: 16px;
+  padding: 15px 30px;
+  margin: 20px auto 0;
+  color: #fff;
+  background: #ff4c4c;
+  border-color: #ff4c4c;
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+}
+
+@media(max-width: 568px) {
+  .form-mid {
+    padding: 1.5rem;
+  }
+}
+
+/* /simple contact form */
